# django_starwars_team_api

./: .dockerignore  .env.example  Dockerfile  README.md  Star_Wars_Team_Builder_API.postman_collection.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
authentication/: serializers.py  urls.py  views.py
characters/: models.py  schemas.py  serializers.py  services.py  urls.py  views.py
characters/management/commands/: populate_characters.py
characters/migrations/: 0001_initial.py  0002_character_biography.py  0003_character_evilness_explanation_and_more.py  0004_character_description_embedding.py
core/: models.py
django_starwars_team_api/: asgi.py  settings.py  urls.py  wsgi.py
teams/: models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_team_members.py  0003_team_is_deleted_teammember_is_deleted.py
